Update probe, fix diagnostics
